<resources>
    <string name="app_name">MathGuide</string>
    <string name="navigation_header_title">Добро пожаловать!</string>
    <string name="nav_entry">Как поступить?</string>
    <string name="nav_department">Кафедры</string>
    <string name="nav_direction">Направления</string>
    <string name="nav_contacts">Контакты</string>
    <string name="nav_about">О программе</string>
    <string name="menu_home">На главную</string>
    <string name="menu_entrants">Абитуриентам</string>
    <string name="menu_entry">Как поступить?</string>
    <string name="menu_department">Кафедры</string>
    <string name="menu_direction">Направления</string>
    <string name="menu_contacts">Контакты</string>
    <string name="menu_other">Прочее</string>
    <string name="menu_about">О программе</string>
    <string name="menu_exit">Выйти</string>
    <string name="text_title_exit">Вы действительно хотите выйти?</string>
    <string name="text_negative">Отмена</string>
    <string name="text_positive">Выход</string>
    <string name="text_about">MathGuide v1.0</string>
    <string name="text_about_1">Все права защищены</string>
    <string name="text_about_2">2020</string>
    <string name="text_entrants">
        <![CDATA[
        <h1 style="text-align:center">Уважаемый абитуриент!</h1>
        <p><br></p>
        <h4 style="text-align:center">Приглашаем Вас поступить на математический факультет Ярославского государственного университета им. П.Г. Демидова!</h4>
        <p><br></p>
        <p>В 2019 г. математический факультет ЯрГУ осуществляет приём абитуриентов на очное обучение по направлению «Математика и компьютерные науки» (бакалавриат, 4 года обучения), направлению «Прикладная математика и информатика» (бакалавриат, 4 года обучения), направлению «Информационная безопасность» (бакалавриат, 4 года обучения) и специальности «Компьютерная безопасность» (специалитет, период обучения — 5,5 лет).</p>
        <p>Вступительные испытания (результаты ЕГЭ) принимаются по следующим предметам: русский язык, математика, информатика и информационно-коммуникационные технологии. В 2019 году в ЯрГУ установлены следующие минимальные баллы по этим предметам:</p>
        <ul><li>русский язык: 36</li><li>математика: 27</li><li>информатика и информационно-коммуникационные технологии: 40</li></ul>
        <p>Проходные баллы 2018 года: «Компьютерная безопасность» 225,  «Информационная безопасность» 216, «Математика и компьютерные науки» — 199, «Прикладная математика и информатика» — 211.</p>
        <p>Факультет располагает опытными и высококвалифицированными преподавательскими кадрами, среди которых 15 докторов наук, профессоров и более 20 кандидатов наук, доцентов. На факультете работают 7 кафедр, 3 научно-исследовательских лаборатории. По ключевым показателям (научная деятельность, качество набора абитуриентов и др) наш факультет входит в первую десятку математических факультетов классических вузов России.</p>
        <p>Бакалавры могут продолжить свое обучение в двухгодичной магистратуре. На факультете работает аспирантура, действуют специализированные советы по защите диссертаций. Под руководством преподавателей студенты факультета занимаются научной работой по актуальной тематике, принимают участие в конкурсах и олимпиадах, получают премии, занимают призовые места. Если Вы занимались математикой или информатикой ранее, то Вы сможете продолжить исследования в интересующей Вас области и во время обучения на факультете.</p>
        <p>Выпускники математического факультета весьма востребованы на рынке труда. Они работают в аналитических отделах самых различных учреждений, уверенно получают работу программиста, преподавателя, находят применение своим знаниям на экономических и управленческих должностях. Наши выпускники успешно работают не только во многих организациях региона, но и далеко за его пределами.</p>
        <p><br></p>
        <h4 style="text-align:center">Мы будем рады Вас видеть в числе студентов нашего факультета!</h4>
        <p><br></p>
        <h5 style="text-align:end"><em>Нестеров Павел Николаевич</em></h5>
        <h6 style="text-align:end"><em>декан математического факультета Ярославского государственного университета им. П.Г. Демидова</em></h6>
        ]]>
    </string>
</resources>