<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_entrants"
        android:icon="@android:drawable/star_off"
        android:title="@string/menu_home" />
    <item android:title="@string/menu_entrants">
        <menu>
            <item
                android:id="@+id/nav_entry"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/menu_entry" />
            <item
                android:id="@+id/nav_department"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/menu_department" />
            <item
                android:id="@+id/nav_direction"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/menu_direction" />
            <item
                android:id="@+id/nav_contacts"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/menu_contacts" />
        </menu>
    </item>
    <item
        android:title="@string/menu_other">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/menu_about" />
        </menu>
    </item>
</menu>
