<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        tools:context=".fragment.AboutProgramFragment">

        <TextView
            android:id="@+id/text_about"
            android:layout_width="311dp"
            android:layout_height="36dp"
            android:gravity="center"
            android:text="@string/text_about"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_background"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/text_about_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_about_1"
            android:layout_width="191dp"
            android:layout_height="38dp"
            android:gravity="center"
            android:text="@string/text_about_1"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_background"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/text_about_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_about_2"
            android:layout_width="69dp"
            android:layout_height="36dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/text_about_2"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_background"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/image_about"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toTopOf="@+id/text_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>